--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul class="navbar-nav ms-auto me-2">
               <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
               <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li> 
-              <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>                            
+              <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>                        
             </ul>
           </div>
         </div>
@@ -336,7 +336,7 @@
           </div>
           <div class="col-sm">
             <div class="video">
-              <iframe style="display: block; margin: auto;" width="560" height="315" src="link" frameborder="0" allowfullscreen></iframe>
+              <iframe style="display: block; margin: auto;" width="560" height="315" src="https://youtu.be/no2Otuxsp4c" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
