--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           </div>
           <div class="col-sm">
             <div class="video">
-              <iframe style="display: block; margin: auto;" width="560" height="315" src="https://youtu.be/no2Otuxsp4c" frameborder="0" allowfullscreen></iframe>
+              <iframe style="display: block; margin: auto;" width="560" height="315" src="https://www.youtube.com/watch?v=no2Otuxsp4c" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
