--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             </ul>
           </div>
           <div class="col-sm">
-            <div class="video">
+            <div class="iframe-container">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/no2Otuxsp4c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
