--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
         <h5>NX Launcher</h5>
         <div class="row">
           <div class="col-sm">
-            <li>NX launhcer setup and configuration to run different versions of NX</li>
-            <li>Configuration of NX applications using different switches</li>
+            <li>Setup and configuration to run different versions of NX</li>
+            <li>Configuration of different NX applications using switches</li>
             <ul>
               <li>NX</li>
               <li>NX Viewer</li>
