--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           </div>
           <div class="col-sm">
             <div class="iframe-container">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/no2Otuxsp4c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/tWqcX0UHxR0?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
         </div>
