--- a/index.html
+++ b/index.html
@@ -327,12 +327,12 @@
           <div class="col-sm">
             <li>Setup and configuration to run different versions of NX</li>
             <li>Configuration of different NX applications using switches</li>
-            <ol>
+            <ul>
               <li>NX</li>
               <li>NX Viewer</li>
               <li>NX Simcenter 3D</li>
               <li>NX Command Prompt</li>
-            </ol>
+            </ul>
           </div>
           <div class="col-sm">
             <div class="iframe-container">
@@ -356,6 +356,43 @@
       </div>
     </div>
   </div> 
+  <br>
+  <div class="bg-light p-3">      
+    <div class="container">
+      <h5>Attribute Mapping - Saved NX Version</h5>
+      <div class="row">
+        <div class="col-sm">
+          <li>To display NX version of part file saved as an attribute on UGMASTER dataset</li>
+          <li>Attribute can be used</li>
+            <ul>
+            <li>As column in the Assembly Navigator</li>
+            <li>Expression value</li>
+            <li>Display value in the parts list, note or tabular note</li>            
+          </ul>
+        </div>
+        <div class="col-sm">
+          <div class="iframe-container">
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/VUDYheyJAQk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <br>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <img src="images/Saved_NX_Version/Part_Properties_NX_Version.png" class="img-fluid">
+        </div>
+        <div class="col-sm">
+          <img src="images/Saved_NX_Version/Bulk_Properties_NX_Version.png" class="img-fluid">
+        </div>
+        <div class="col-sm">
+          <img src="images/Saved_NX_Version/ANT_Column_NX_Version.png" class="img-fluid">
+        </div>        
+      </div>           
+
+    </div>
+  </div>
+  <br>
   <!-- <div class="container-narrow">
     <h2 class="h4 my-2 text-center">Teamcenter</h2>
     <div class="bg-light p-3">
@@ -365,9 +402,7 @@
         </div> 
 
     </div>
-  </div>  -->
-
-<br>
+  </div> -->
 
 <footer class="pt-4 pb-4 text-center bg-light">
   <div class="container">
