--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             <ul>
             <li>As column in the Assembly Navigator</li>
             <li>Expression value</li>
-            <li>Display value in the parts list, note or tabular note</li>            
+            <li>To display value in the parts list, note or tabular note</li>            
           </ul>
         </div>
         <div class="col-sm">
@@ -392,17 +392,8 @@
 
     </div>
   </div>
-  <br>
-  <!-- <div class="container-narrow">
-    <h2 class="h4 my-2 text-center">Teamcenter</h2>
-    <div class="bg-light p-3">
-      <div class="row text-center">
-        <div class="col">
-          <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect">Teamcenter <i class="fas fa-arrow-right"></i></a></div>
-        </div> 
-
-    </div>
-  </div> -->
+</div>
+<br> 
 
 <footer class="pt-4 pb-4 text-center bg-light">
   <div class="container">
