--- a/index.html
+++ b/index.html
@@ -345,12 +345,15 @@
         <div class="row">
           <div class="col-sm">
             <img src="images/NX_Launcher/NX_Launcher.png" class="img-fluid">
+            <figcaption>NX Launcher</figcaption>
           </div>
           <div class="col-sm">
             <img src="images/NX_Launcher/NX_Versions.png" class="img-fluid">
+            <figcaption>NX Versions</figcaption>
           </div>
           <div class="col-sm">
             <img src="images/NX_Launcher/NX_Applications.png" class="img-fluid">
+            <figcaption>NX Applications</figcaption>
           </div>
         </div>        
       </div>
@@ -381,12 +384,22 @@
       <div class="row">
         <div class="col-sm">
           <img src="images/Saved_NX_Version/Part_Properties_NX_Version.png" class="img-fluid">
+          <figcaption>Attribute in part properties</figcaption>
         </div>
         <div class="col-sm">
           <img src="images/Saved_NX_Version/Bulk_Properties_NX_Version.png" class="img-fluid">
-        </div>
+          <figcaption>Bulk Properties</figcaption>
+        </div>      
+      </div>   
+      <br>
+      <div class="row">
         <div class="col-sm">
           <img src="images/Saved_NX_Version/ANT_Column_NX_Version.png" class="img-fluid">
+          <figcaption>Assembly Navigator</figcaption>
+        </div>  
+        <div class="col-sm">
+          <img src="images/Saved_NX_Version/UGMASTER_Properties_NX_Version.png" class="img-fluid">
+          <figcaption>Attribute on UGMASTER in RAC</figcaption>
         </div>        
       </div>           
 
