--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
           </div>
           <div class="col-sm">
             <img src="images/NX_Launcher/NX_Versions.png" class="img-fluid">
-            <figcaption>NX Versions</figcaption>
+            <figcaption>NX Environments</figcaption>
           </div>
           <div class="col-sm">
             <img src="images/NX_Launcher/NX_Applications.png" class="img-fluid">
@@ -384,11 +384,11 @@
       <div class="row">
         <div class="col-sm">
           <img src="images/Saved_NX_Version/Part_Properties_NX_Version.png" class="img-fluid">
-          <figcaption>Attribute in part properties</figcaption>
+          <figcaption>Displayed Part properties</figcaption>
         </div>
         <div class="col-sm">
           <img src="images/Saved_NX_Version/Bulk_Properties_NX_Version.png" class="img-fluid">
-          <figcaption>Bulk Properties</figcaption>
+          <figcaption>Bulk Part Properties</figcaption>
         </div>      
       </div>   
       <br>
@@ -399,7 +399,7 @@
         </div>  
         <div class="col-sm">
           <img src="images/Saved_NX_Version/UGMASTER_Properties_NX_Version.png" class="img-fluid">
-          <figcaption>Attribute on UGMASTER in RAC</figcaption>
+          <figcaption>Teamcenter - UGMASTER Properties</figcaption>
         </div>        
       </div>           
 
