--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="col">
           <div class="py-1">
             <a href="https://www.credly.com/badges/9642e706-5686-4455-b9e6-d5493a986ec4/" target="_blank"><img src="images/Badges/Teamcenter X Associate.png" class="img-fluid"></a>
-            <a href="https://www.credly.com/badges/9642e706-5686-4455-b9e6-d5493a986ec4/" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black; font-size:medium;">Teamcenter Associate</figcaption></b></a>
+            <a href="https://www.credly.com/badges/9642e706-5686-4455-b9e6-d5493a986ec4/" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black; font-size:medium;background-color:#f4f6f8;">Teamcenter Associate</figcaption></b></a>
             <!-- <b style="text-align:center">Teamcenter X Associate</b> -->
           </div>                      
         </div>
@@ -131,7 +131,7 @@
         <div class="col">
           <div class="py-1">
             <a href="https://www.credly.com/badges/16497338-0fc9-4840-8475-f6e1628b16d6" target="_blank"><img src="images/Badges/NX Design Associate.png" class="img-fluid"></a> 
-            <a href="https://www.credly.com/badges/16497338-0fc9-4840-8475-f6e1628b16d6" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">NX Design Associate</figcaption></b></a>
+            <a href="https://www.credly.com/badges/16497338-0fc9-4840-8475-f6e1628b16d6" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;background-color:#f4f6f8;">NX Design Associate</figcaption></b></a>
             <!-- <b style="text-align:center">NX Design Associate</b>      -->
           </div>
         </div>
@@ -139,7 +139,7 @@
         <div class="col">
           <div class="py-1">
             <a href="https://www.credly.com/badges/29e90ded-e92f-4acb-9d24-7915dbb6a356" target="_blank"><img src="images/Badges/AWS Certified Cloud Practitioner.png" class="img-fluid"></a>
-            <a href="https://www.credly.com/badges/29e90ded-e92f-4acb-9d24-7915dbb6a356" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">AWS Cloud Practitioner</figcaption></b></a>
+            <a href="https://www.credly.com/badges/29e90ded-e92f-4acb-9d24-7915dbb6a356" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;background-color:#f4f6f8;">AWS Cloud Practitioner</figcaption></b></a>
             <!-- <b style="text-align:center">AWS Cloud Practitioner</b>   -->
           </div>                      
         </div>
@@ -147,7 +147,7 @@
         <div class="col">
           <div class="py-1">
             <a href="https://www.credly.com/badges/7e2625a7-0eb1-4f34-af6e-90bc06d2cb4c" target="_blank"><img src="images/Badges/Certified SAFe 5 Practitioner.png" class="img-fluid"></a>
-            <a href="https://www.credly.com/badges/7e2625a7-0eb1-4f34-af6e-90bc06d2cb4c" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">SAFe 5 Practitioner</figcaption></b></a>
+            <a href="https://www.credly.com/badges/7e2625a7-0eb1-4f34-af6e-90bc06d2cb4c" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;background-color:#f4f6f8;">SAFe 5 Practitioner</figcaption></b></a>
             <!-- <b style="text-align:center">SAFe 5 Practitioner</b>   -->
           </div>                      
         </div>
@@ -155,7 +155,7 @@
         <div class="col">
           <div class="py-1">
             <a href="https://drive.google.com/file/d/1KrzVPQRFBx9YwrItkkJXwICGVyWwT5IT/view" target="_blank"><img src="images/Badges/Mendix Rapid Developer.png" class="img-fluid"></a>
-            <a href="https://drive.google.com/file/d/1KrzVPQRFBx9YwrItkkJXwICGVyWwT5IT/view" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">Mendix Rapid Developer</figcaption></b></a>      
+            <a href="https://drive.google.com/file/d/1KrzVPQRFBx9YwrItkkJXwICGVyWwT5IT/view" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;background-color:#f4f6f8;">Mendix Rapid Developer</figcaption></b></a>      
             <!-- <b style="text-align:center">Mendix Rapid Developer</b>   -->
           </div>                      
         </div>
