--- a/index.html
+++ b/index.html
@@ -316,8 +316,7 @@
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Portfolio</h2>
     </div>    
-  </div>
-  
+  </div>  
   <div class="container-narrow">
     <h2 class="h4 my-2 text-center" >NX Customization</h2>
     <div class="bg-light p-3">      
@@ -402,12 +401,34 @@
           <img src="images/Saved_NX_Version/UGMASTER_Properties_NX_Version.png" class="img-fluid">
           <figcaption>Teamcenter - UGMASTER Properties</figcaption>
         </div>        
-      </div>           
-
+      </div> 
     </div>
-  </div>
+  </div> 
+</div> 
+  <br>
+  <div class="bg-light p-3">      
+    <div class="container">
+      <h5>Menu Scripting - NX Title</h5>
+      <div class="row">
+        <div class="col-sm">          
+          <li>Change default NX title name with custom text</li>
+            <ol>
+            <li>Using default menu file in the NX installation folder</li>
+            <li>Using menu file placed in user directoty folder pointed by UGII_USER_DIR</li>
+            <li>Using menu file pointed by variable UGII_MAIN_MENU_FILE</li>            
+          </ol>
+        </div>
+        <div class="col-sm">
+          <div class="col-sm">
+            <img src="images/Menu_Scripting/Menu_Scripting_NX_Title.png" class="img-fluid">
+            <figcaption>Custom NX Title</figcaption>
+          </div>   
+        </div>
+      </div>
+      <br>
 </div>
-<br> 
+</div>
+<br>
 
 <footer class="pt-4 pb-4 text-center bg-light">
   <div class="container">
