--- a/index.html
+++ b/index.html
@@ -374,12 +374,12 @@
         </div>
         <div class="col-sm">
           <div class="iframe-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gV9AKL9XFFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/otUDYvf4Ylo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
         </div>
       </div>
       <br>
-    <div class="container">
+      <div class="container">
       <div class="row">
         <div class="col-sm">
           <img src="images/Saved_NX_Version/ANT_Column_NX_Version.png" class="img-fluid">
@@ -411,19 +411,30 @@
       <h5>Menu Scripting - NX Title</h5>
       <div class="row">
         <div class="col-sm">          
-          <li>Change default NX title name with custom text</li>
+          <li>Change default NX title with custom text</li>
             <ol>
-            <li>Using default menu file in the NX installation folder</li>
+            <li>Using OOTB menu file in the NX installation folder</li>
             <li>Using menu file placed in user directoty folder pointed by UGII_USER_DIR</li>
             <li>Using menu file pointed by variable UGII_MAIN_MENU_FILE</li>            
           </ol>
         </div>
         <div class="col-sm">
-          <div class="col-sm">
-            <img src="images/Menu_Scripting/Menu_Scripting_NX_Title.png" class="img-fluid">
-            <figcaption>Custom NX Title</figcaption>
-          </div>   
+          <div class="iframe-container">            
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ID9N4iv-cuA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+           </div>
         </div>
+      </div>
+      <br>
+      <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <center>
+          <img src="images/Menu_Scripting/Menu Scripting - NX Title.png" class="img-fluid">
+          <figcaption>Assembly Navigator</figcaption>
+        </center>
+        </div>  
+        </div>   
+      </div>  
       </div>
       <br>
 </div>
