--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         <div class="col-sm">
           <center>
           <img src="images/Menu_Scripting/Menu Scripting - NX Title.png" class="img-fluid">
-          <figcaption>Assembly Navigator</figcaption>
+          <figcaption>Custom NX Title</figcaption>
         </center>
         </div>  
         </div>   
