--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
   <br>
   <div class="bg-light p-3">      
     <div class="container">
-      <h5>Menu Scripting - NX Title</h5>
+      <h5>Menu Customization - NX Title</h5>
       <div class="row">
         <div class="col-sm">          
           <li>Change default NX title with custom text</li>
@@ -429,7 +429,7 @@
       <div class="row">
         <div class="col-sm">
           <center>
-          <img src="images/Menu_Scripting/Menu Scripting - NX Title.png" class="img-fluid">
+          <img src="images/Menu_Scripting/Menu Customization - NX Title.png" class="img-fluid">
           <figcaption>Custom NX Title</figcaption>
         </center>
         </div>  
