--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
           <li>Change default NX title with custom text</li>
             <ol>
             <li>Using OOTB menu file in the NX installation folder</li>
-            <li>Using menu file placed in user directoty folder pointed by UGII_USER_DIR</li>
-            <li>Using menu file pointed by variable UGII_MAIN_MENU_FILE</li>            
+            <li>Using menu file placed in user directory folder pointed by the variable <b>UGII_USER_DIR</b></li>
+            <li>Using menu file pointed by the variable <b>UGII_MAIN_MENU_FILE</b></li>            
           </ol>
         </div>
         <div class="col-sm">
@@ -437,7 +437,35 @@
       </div>  
       </div>
       <br>
-</div>
+  </div>
+  <br>
+  <div class="bg-light p-3">      
+    <div class="container">
+      <h5>Customer Defaults - Welcome Screen</h5>
+      <div class="row">
+        <div class="col-sm">          
+          <li>User inerface customization of welcome page by using the custom URL in the customer defaults settings</li>
+        </div>
+        <div class="col-sm">
+          <div class="iframe-container">            
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/pAK5BCVGHo0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+           </div>
+        </div>
+      </div>
+      <br>
+      <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <center>
+          <img src="images/Customer_Defaults/Customer Defaults - Welcome Page.png" class="img-fluid">
+          <figcaption>Welcome Page</figcaption>
+        </center>
+        </div>  
+        </div>   
+      </div>  
+      </div>
+      <br>
+  </div>
 </div>
 <br>
 
