--- a/index.html
+++ b/index.html
@@ -319,7 +319,16 @@
   </div>  
   <div class="container-narrow">
     <h2 class="h4 my-2 text-center" >NX Customization</h2>
-    <div class="bg-light p-3">      
+<div class="row">
+  <div class="col-md-6">
+    <li><a href="#nxlauncher">NX Launcher</a></li>
+    <li><a href="#am-nxversion">Attribute Mapping - Saved NX Version</a></li>
+    <li><a href="#mc-nxtitle">Menu Customization - NX Title</a></li>
+    <li><a href="#cd-welcomepage">Customer Defaults - Welcome Screen</a></li>
+  </div>  
+</div>
+<br>
+    <div class="bg-light p-3" id="nxlauncher">      
       <div class="container">
         <h5>NX Launcher</h5>
         <div class="row">
@@ -359,7 +368,7 @@
     </div>
   </div> 
   <br>
-  <div class="bg-light p-3">      
+  <div class="bg-light p-3"id="am-nxversion">      
     <div class="container">
       <h5>Attribute Mapping - Saved NX Version</h5>
       <div class="row">
@@ -406,7 +415,7 @@
   </div> 
 </div> 
   <br>
-  <div class="bg-light p-3">      
+  <div class="bg-light p-3"id="mc-nxtitle">      
     <div class="container">
       <h5>Menu Customization - NX Title</h5>
       <div class="row">
@@ -439,7 +448,7 @@
       <br>
   </div>
   <br>
-  <div class="bg-light p-3">      
+  <div class="bg-light p-3"id="cd-welcomepage">      
     <div class="container">
       <h5>Customer Defaults - Welcome Screen</h5>
       <div class="row">
