--- a/index.html
+++ b/index.html
@@ -321,10 +321,10 @@
     <h2 class="h4 my-2 text-center" >NX Customization</h2>
 <div class="row">
   <div class="col-md-6">
-    <li><a href="#nxlauncher">NX Launcher</a></li>
-    <li><a href="#am-nxversion">Attribute Mapping - Saved NX Version</a></li>
-    <li><a href="#mc-nxtitle">Menu Customization - NX Title</a></li>
-    <li><a href="#cd-welcomepage">Customer Defaults - Welcome Screen</a></li>
+    <h6><li><a href="#nxlauncher">NX Launcher</a></li></h6>
+    <h6><li><a href="#am-nxversion">Attribute Mapping - Saved NX Version</a></li></h6>
+    <h6><li><a href="#mc-nxtitle">Menu Customization - NX Title</a></li></h6>
+    <h6><li><a href="#cd-welcomepage">Customer Defaults - Welcome Screen</a></li></h6>
   </div>  
 </div>
 <br>
