--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!-- upto 2 directory depth-->
 <html lang="en-US">
@@ -326,12 +327,9 @@
     <h6><li><a href="#mc-nxtitle">Menu Customization - NX Title</a></li></h6>
     <h6><li><a href="#cd-welcomepage">Customer Defaults - Welcome Screen</a></li></h6>
   </div>  
-  <div class="col-md-6">
-    <h6><li><a href="#">Plceholder</a></li></h6>
-    <h6><li><a href="#">Plceholder</a></li></h6>
-    <h6><li><a href="#">Plceholder</a></li></h6>
-    <h6><li><a href="#">Plceholder</a></li></h6>
-  </div>  
+  <!-- <div class="col-md-6">
+    <h6><li><a href="#fileprotection">File Protection (Native NX)</a></li></h6>
+  </div>   -->
 </div>
 <br>
     <div class="bg-light p-3" id="nxlauncher">      
@@ -481,6 +479,34 @@
       </div>
       <br>
   </div>
+  <br>
+  <!-- <div class="bg-light p-3"id="fileprotection">      
+    <div class="container">
+      <h5>File Protection (Native NX)</h5>
+      <div class="row">
+        <div class="col-sm">          
+          <li>Password based protection of NX piece parts or an assembly parts in native NX</li>
+        </div>
+        <div class="col-sm">
+          <div class="iframe-container">            
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/pAK5BCVGHo0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+           </div>
+        </div>
+      </div>
+      <br>
+      <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <center>
+          <img src="images/Customer_Defaults/Customer Defaults - Welcome Page.png" class="img-fluid">
+          <figcaption>Welcome Page</figcaption>
+        </center>
+        </div>  
+        </div>   
+      </div>  
+      </div>
+      <br>
+  </div> -->
 </div>
 <br>
 
