--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
     <h6><li><a href="#mc-nxtitle">Menu Customization - NX Title</a></li></h6>
     <h6><li><a href="#cd-welcomepage">Customer Defaults - Welcome Screen</a></li></h6>
   </div>  
-  <!-- <div class="col-md-6">
+  <div class="col-md-6">
     <h6><li><a href="#fileprotection">File Protection (Native NX)</a></li></h6>
-  </div>   -->
+  </div>  
 </div>
 <br>
     <div class="bg-light p-3" id="nxlauncher">      
@@ -425,11 +425,11 @@
       <div class="row">
         <div class="col-sm">          
           <li>Change default NX title with custom text</li>
-            <ol>
+            <ul>
             <li>Using OOTB menu file in the NX installation folder</li>
             <li>Using menu file placed in user directory folder pointed by the variable <b>UGII_USER_DIR</b></li>
             <li>Using menu file pointed by the variable <b>UGII_MAIN_MENU_FILE</b></li>            
-          </ol>
+          </ul>
         </div>
         <div class="col-sm">
           <div class="iframe-container">            
@@ -480,16 +480,21 @@
       <br>
   </div>
   <br>
-  <!-- <div class="bg-light p-3"id="fileprotection">      
+  <div class="bg-light p-3" id="fileprotection">      
     <div class="container">
       <h5>File Protection (Native NX)</h5>
       <div class="row">
         <div class="col-sm">          
-          <li>Password based protection of NX piece parts or an assembly parts in native NX</li>
+          <li>Password based protection of NX piece part(s) or an assembly parts in native NX</li>
+          <ul>
+            <li>Enable Customer Default setting</li>
+            <li>Set Administrator, Full Control, Local Control and Read Only passwords for part(s)</li>
+            <li>Remove password</li>            
+          </ul>
         </div>
         <div class="col-sm">
           <div class="iframe-container">            
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/pAK5BCVGHo0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/5YqXzMoU8EE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
            </div>
         </div>
       </div>
@@ -498,15 +503,15 @@
       <div class="row">
         <div class="col-sm">
           <center>
-          <img src="images/Customer_Defaults/Customer Defaults - Welcome Page.png" class="img-fluid">
-          <figcaption>Welcome Page</figcaption>
+          <img src="images/Customer_Defaults/File Protection - Native NX.png" class="img-fluid">
+          <figcaption>Encryoted Part</figcaption>
         </center>
         </div>  
         </div>   
       </div>  
       </div>
       <br>
-  </div> -->
+    </div>
 </div>
 <br>
 
