--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
         <div class="col-sm">
           <center>
           <img src="images/Customer_Defaults/File Protection - Native NX.png" class="img-fluid">
-          <figcaption>Encryoted Part</figcaption>
+          <figcaption>Encrypted Part</figcaption>
         </center>
         </div>  
         </div>   
