--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
 <div class="row"> 
   <div class="col-md-6">
     <h6><li><a href="#nxlauncher">NX Launcher</a></li></h6>
+    <h6><li><a href="#am-itemrevdes">Attribute Mapping - Item Revision Description</a></li></h6>
     <h6><li><a href="#am-nxversion">Attribute Mapping - Saved NX Version</a></li></h6>
     <h6><li><a href="#mc-nxtitle">Menu Customization - NX Title</a></li></h6>
     <h6><li><a href="#cd-welcomepage">Customer Defaults - Welcome Screen</a></li></h6>
@@ -372,6 +373,38 @@
     </div>
   </div> 
   <br>
+  <div class="bg-light p-3" id="am-itemrevdes"> 
+    <div class="bg-light p-3"id="mc-nxtitle">      
+      <div class="container">
+        <h5>Attribute Mapping - Item Revision Description</h5>
+        <div class="row">
+          <div class="col-sm">          
+            <li>To display item revision description as ain the assembly navigator</li>
+          </div>
+          <div class="col-sm">
+            <div class="iframe-container">            
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/veUqgYfR0Pw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+             </div>
+          </div>
+        </div>
+        <br>
+        <div class="container">
+        <div class="row">
+          <div class="col-sm">         
+            <img src="images/Attribute_Mapping/Item_Rev_Description_Part_Properties.png" class="img-fluid">
+            <figcaption>Part Properties</figcaption>            
+          </div>  
+          <div class="col-sm">           
+            <img src="images/Attribute_Mapping/Item_Rev_Description_ANT_Column.png" class="img-fluid">
+            <figcaption>Assembly Navigator</figcaption>            
+          </div> 
+          </div>   
+        </div>  
+        </div>
+        <br>
+    </div>
+  </div> 
+ <br>
   <div class="bg-light p-3"id="am-nxversion">      
     <div class="container">
       <h5>Attribute Mapping - Saved NX Version</h5>
