--- a/index.html
+++ b/index.html
@@ -173,6 +173,31 @@
         <thead>
           <tr>
             <th scope="col">#</th>
+            <th scope="col" width="400">Community/Forum</th>
+            <th scope="col">Rank</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td><a href="https://community.sw.siemens.com/s/topic/0TO4O000000MihTWAS/nx-design" target="_blank"><b>NX Design</b></a></td>
+            <td>5th among Top Knowledgeable People</td>
+
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td><a href="https://community.sw.siemens.com/s/topic/0TO4O000000cZK1WAM/xcelerator-share" target="_blank"><b>Xcelerator Share</b></a></td>
+            <td>1st among Top Knowledgeable People</td>
+          </tr>
+        </tbody>
+      </table>
+    </div> 
+    <br>
+    <div>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
             <th scope="col" width="400">Group Name</th>
             <th scope="col">Platform</th>
             <th scope="col">Role</th>
@@ -183,35 +208,35 @@
           <tr>
             <th scope="row">1</th>
             <td><a href="https://www.linkedin.com/groups/2489365/" target="_blank"><b>Siemens PLM TeamCenter</b></a></td>
-            <td><a class="nav-link" href="https://www.linkedin.com/groups/2489365/" target="_blank title="Facebook"><i class="fab fa-linkedin fa-3x" style='color:#0072b1'></i><span class="menu-title sr-only">Facebook</span></a></td>
+            <td><a class="nav-link" href="https://www.linkedin.com/groups/2489365/" target="_blank title="Facebook"><i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i><span class="menu-title sr-only">Facebook</span></a></td>
             <td>Manager</td>
             <td>12000+</td>
           </tr>
           <tr>
             <th scope="row">2</th>
             <td><a href="https://www.linkedin.com/groups/2962050/" target="_blank"><b>Siemens NX (#NXMakesItReal)</b></a></td>
-            <td><a class="nav-link" href="https://www.linkedin.com/groups/2962050/" target="_blank title="LinkedIn"><i class="fab fa-linkedin fa-3x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></td>
+            <td><a class="nav-link" href="https://www.linkedin.com/groups/2962050/" target="_blank title="LinkedIn"><i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></td>
             <td>Owner</td>
             <td>11800+</td>
           </tr>
           <tr>
             <th scope="row">3</th>
             <td><a href="https://www.facebook.com/groups/ugnxusers" target="_blank title="Facebook"><b>Siemens NX Users</b></a></td>
-            <td><a class="nav-link" href="https://www.facebook.com/groups/ugnxusers" target="_blank title="Facebook"><i class="fab fa-facebook-square fa-3x" style='color:#4267b2'></i><span class="menu-title sr-only">Facebook</span></a></td>
+            <td><a class="nav-link" href="https://www.facebook.com/groups/ugnxusers" target="_blank title="Facebook"><i class="fab fa-facebook-square fa-2x" style='color:#4267b2'></i><span class="menu-title sr-only">Facebook</span></a></td>
             <td>Owner</td>
             <td>13100+</td>
           </tr>
           <tr>
             <th scope="row">4</th>
             <td><a href="https://www.linkedin.com/groups/869117/" target="_blank" title="LinkedIn"><b>NX Users (Formerly Unigraphics) Siemens PLM</b></a></td>
-            <td><a class="nav-link" ><i class="fab fa-linkedin fa-3x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></td>
+            <td><a class="nav-link" ><i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></td>
             <td>Manager</td>
             <td>29500+</td>
           </tr>
           <tr>
             <th scope="row">5</th>
             <td><a href="https://www.linkedin.com/groups/12563746/" target="_blank title="Facebook"><b>Siemens Xcelerator (XaaS)</b></a></td>
-            <td><a class="nav-link" href="https://www.linkedin.com/groups/12563746/" target="_blank title="Facebook"><i class="fab fa-linkedin fa-3x" style='color:#0072b1'></i><span class="menu-title sr-only">Facebook</span></a></td>
+            <td><a class="nav-link" href="https://www.linkedin.com/groups/12563746/" target="_blank title="Facebook"><i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i><span class="menu-title sr-only">Facebook</span></a></td>
             <td>Owner</td>
             <td>100+</td>
           </tr>
