--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
   </div>  
   <div class="col-md-6">
     <h6><li><a href="#fileprotection">File Protection (Native NX)</a></li></h6>
+    <h6><li><a href="#customtemplates">Custom Templates</a></li></h6>
     <h6><li><a href="#nxopen-highlightobjects">NX Open - Highlight Objects</a></li></h6>
   </div>  
 </div>
@@ -305,8 +306,8 @@
     </div>
   </div> 
   <br>
-  <div class="bg-light p-3" id="am-itemrevdes"> 
-    <div class="bg-light p-3"id="mc-nxtitle">      
+  
+    <div class="bg-light p-3"id="am-itemrevdes"">      
       <div class="container">
         <h5>Attribute Mapping - Item Revision Description</h5>
         <div class="row">
@@ -332,7 +333,7 @@
           </div> 
           </div>   
         </div>  
-        </div>
+        
         <br>
     </div>
   </div> 
@@ -479,6 +480,37 @@
     </div>
 </div>
 <br>
+<div class="bg-light p-3" id="customtemplates">      
+  <div class="container">
+    <h5>Custom Templates</h5>
+    <div class="row">
+      <div class="col-sm">          
+        <li>Custom Templates modified using PAX and dependent files with custom</li>
+        <ol>
+          <li>Name</li>
+          <li>Content</li>
+          <li>Preview</li>            
+        </ol>
+      </div>
+      <div class="col-sm">
+        <div class="iframe-container">            
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/i0xEDziege8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+         </div>
+      </div>
+    </div> 
+    <br>    
+    <div class="container">     
+      <div class="row">
+        <div class="col-sm">
+          <img src="images/Templates/Custom Templates.png" class="img-fluid">
+          <figcaption>Custom Templates</figcaption>
+        </div> 
+          
+      </div> 
+    </div>  
+    </div>        
+  </div>
+<br>
 <div class="bg-light p-3" id="nxopen-highlightobjects">      
     <div class="container">
       <h5>NX Open - Highlight Objects</h5>
@@ -508,10 +540,8 @@
       </div>  
       </div>
       <br>
-    </div>
-</div> 
+    </div>     
 <br>
-
 <footer class="pt-4 pb-4 text-center bg-light">
   <div class="container">
     <div class="my-3">
@@ -533,14 +563,14 @@
     </div>
   </div>
 </footer></div>
-    </div>
-    <div id="scrolltop"><a class="btn btn-secondary" href="#top"><span class="icon"><i class="fas fa-angle-up fa-x"></i></span></a></div>
-    <script src="./scripts/imagesloaded.pkgd.min.js?ver=1.2.0"></script>
-    <script src="./scripts/masonry.pkgd.min.js?ver=1.2.0"></script>
-    <script src="./scripts/BigPicture.min.js?ver=1.2.0"></script>
-    <script src="./scripts/purecounter.min.js?ver=1.2.0"></script>
-    <script src="./scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
-    <script src="./scripts/aos.min.js?ver=1.2.0"></script>
-    <script src="./scripts/main.js?ver=1.2.0"></script>
-  </body>
+</div>
+<!-- <div id="scrolltop"><a class="btn btn-secondary" href="#top"><span class="icon"><i class="fas fa-angle-up fa-x"></i></span></a></div> -->
+<script src="./scripts/imagesloaded.pkgd.min.js?ver=1.2.0"></script>
+<script src="./scripts/masonry.pkgd.min.js?ver=1.2.0"></script>
+<script src="./scripts/BigPicture.min.js?ver=1.2.0"></script>
+<script src="./scripts/purecounter.min.js?ver=1.2.0"></script>
+<script src="./scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
+<script src="./scripts/aos.min.js?ver=1.2.0"></script>
+<script src="./scripts/main.js?ver=1.2.0"></script>
+</body>
 </html>
