--- a/index.html
+++ b/index.html
@@ -228,15 +228,16 @@
           </tr>
           <tr>
             <th scope="row">4</th>
-            <td><a href="https://www.linkedin.com/groups/869117/" target="_blank" title="LinkedIn"><b>NX Users (Formerly Unigraphics) Siemens PLM</b></a></td>
-            <td><a class="nav-link" ><i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></td>
+            <td><a href="https://www.linkedin.com/groups/869117/""" target="_blank"><b>NX Users (Formerly Unigraphics) Siemens PLM</b></a></td> 
+
+            <td><a class="nav-link" href="https://www.linkedin.com/groups/869117/" target="_blank title="LinkedIn"><i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></td>
             <td>Manager</td>
             <td>29500+</td>
           </tr>
           <tr>
             <th scope="row">5</th>
-            <td><a href="https://www.linkedin.com/groups/12563746/" target="_blank title="Facebook"><b>Siemens Xcelerator (XaaS)</b></a></td>
-            <td><a class="nav-link" href="https://www.linkedin.com/groups/12563746/" target="_blank title="Facebook"><i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i><span class="menu-title sr-only">Facebook</span></a></td>
+            <td><a href="https://www.linkedin.com/groups/12563746/"" target="_blank"><b>Siemens Xcelerator (XaaS)</b></a></td>            
+            <td><a class="nav-link" href="https://www.linkedin.com/groups/12563746/"" target="_blank title="LinkedIn"><i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></td>
             <td>Owner</td>
             <td>100+</td>
           </tr>
