--- a/index.html
+++ b/index.html
@@ -248,22 +248,62 @@
   <div class="container">
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Portfolio</h2>
+      
     </div>    
   </div>  
   <div class="container-narrow">
-    <h2 class="h4 my-2 text-center" >NX Customization</h2>
+    <h2 class="h4 my-2 text-center" id="teamcentercustomization">Teamcenter Customization</h2>
+    <div class="row"> 
+      <div class="col-md-6">
+        <ul>
+        <h6><li><a href="#customitem">BMIDE - Custom Item</a></li></h6>
+        </ul>    
+      </div>      
+    </div>
+    <div class="bg-light p-3" id="customitem">      
+      <div class="container">
+        <h5>BMIDE - Custom Item</h5>
+        <div class="row">
+          <div class="col-sm">
+            <li>Custom item creation and depoyment using BMIDE</li>                     
+          </div>
+          <div class="col-sm">
+            <div class="iframe-container">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/RWX3j3lshmU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+        <br>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <img src="images/Teamcenter/BMIDE/BMIDE_Custom_Item.png" class="img-fluid">
+            <figcaption>Custom Item</figcaption>
+          </div>
+        </div>        
+      </div>
+    </div>
+    </div>
+  <div class="container-narrow">
+    <h2 class="h4 my-2 text-center" id="nxcustomization">NX Customization</h2>
 <div class="row"> 
   <div class="col-md-6">
+    <ul>
     <h6><li><a href="#nxlauncher">NX Launcher</a></li></h6>
     <h6><li><a href="#am-itemrevdes">Attribute Mapping - Item Revision Description</a></li></h6>
     <h6><li><a href="#am-nxversion">Attribute Mapping - Saved NX Version</a></li></h6>
-    <h6><li><a href="#mc-nxtitle">Menu Customization - NX Title</a></li></h6>
-    <h6><li><a href="#cd-welcomepage">Customer Defaults - Welcome Screen</a></li></h6>
+    <h6><li><a href="#mc-nxtitle">Menu Customization - NX Title</a></li></h6> 
+    </ul>
+
   </div>  
   <div class="col-md-6">
-    <h6><li><a href="#fileprotection">File Protection (Native NX)</a></li></h6>
-    <h6><li><a href="#customtemplates">Custom Templates</a></li></h6>
-    <h6><li><a href="#nxopen-highlightobjects">NX Open - Highlight Objects</a></li></h6>
+    <ul>
+      <h6><li><a href="#cd-welcomepage">Customer Defaults - Welcome Screen</a></li></h6>
+      <h6><li><a href="#fileprotection">File Protection (Native NX)</a></li></h6>
+      <h6><li><a href="#customtemplates">Custom Templates</a></li></h6>
+      <h6><li><a href="#nxopen-highlightobjects">NX Open - Highlight Objects</a></li></h6>
+    </ul>
+
   </div>  
 </div>
 <br>
