--- a/index.html
+++ b/index.html
@@ -277,8 +277,12 @@
       <div class="container">
         <div class="row">
           <div class="col-sm">
-            <img src="images/Teamcenter/BMIDE/BMIDE_Custom_Item.png" class="img-fluid">
-            <figcaption>Custom Item</figcaption>
+            <img src="images/Teamcenter/BMIDE/AWC_Custom_Item.png" class="img-fluid">
+            <figcaption>Teamcenter - Custom Item</figcaption>
+          </div>
+          <div class="col-sm">
+            <img src="images/Teamcenter/BMIDE/RAC_Custom_Item.png" class="img-fluid">
+            <figcaption>Active Workspace - Custom Item</figcaption>
           </div>
         </div>        
       </div>
